# mytestapp

./: README.md  README1.md  pyproject.toml  report.md
src/autoblogger/: crew.py  main.py
