[project]
name = "autoblogger"
version = "0.1.0"
description = "autoblogger using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.105.0,<1.0.0"
]

[project.scripts]
autoblogger = "autoblogger.main:run"
run_crew = "autoblogger.main:run"
train = "autoblogger.main:train"
replay = "autoblogger.main:replay"
test = "autoblogger.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
